# pplx-kernels

./: .clang-format  .gitignore  20250909_050703_all_to_all.tsv  LICENSE  README.md  README_H20.md  env_h20.sh  pyproject.toml  setup.py
.github/workflows/: lint.yml
csrc/: CMakeLists.txt
csrc/all_to_all/: CMakeLists.txt  all_to_all.cpp  all_to_all.h  bench_all_to_all.cpp  internode.cpp  internode.h  internode_combine.cu  internode_dispatch.cu  internode_gather.cu  internode_scatter.cu  intranode.cpp  intranode.cuh  intranode.h  intranode_combine.cu  intranode_dispatch.cu  test_all_to_all.cpp  test_utils.h
csrc/bindings/: all_to_all_ops.cpp  all_to_all_ops.h  bindings.cpp  nvshmem.cpp  nvshmem.h
csrc/core/: CMakeLists.txt  atomic.cuh  buffer.h  common_utils.h  cuda_utils.h  device_utils.cuh  device_utils.h  distributed.cpp  distributed.h  kernels.cu  kernels.h  mpi_utils.h  nccl_utils.h  nvshmem_utils.h  registration.h  scalar_type.hpp  utils.h
docs/: build.sh  build_ompi.sh  build_ucx.sh  env.sh  install-amd.md  install-driver-and-dependencies.md
pplx_kernels/: all_to_all.py  nvshmem.py  ops.py
src/pplx_kernels/: __init__.py  all_to_all.py  ops.py
tests/: all_to_all_utils.py  bench_all_to_all.py  distributed_utils.py  logging_utils.py  test_all_to_all.py  test_nvshmem.py
